--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,10 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "anthonymartin/geo-location": "^2.0",
         "barryvdh/laravel-ide-helper": "^2.6",
         "fideloper/proxy": "^4.0",
+        "jeroendesloovere/geolocation-php-api": "^2.1",
         "jmikola/geojson": "^1.0",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.3",
